--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,14 +1,3 @@
-@font-face {
-    font-family: 'Manolo Mono';
-    src: url('/static/manolo-mono.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-body {
-    background-color: #18191A;
-}
-
 #recentGames {
     height: 370px;
     width: 630px;
@@ -50,6 +39,11 @@ img {
     height: 100px;
 }
 
+h3 {
+    color: white;
+    margin-top: 0px;
+}
+
 .gameContent {
     margin-left: 8px;
 }
@@ -62,6 +56,10 @@ img {
     margin-top: 14px;
     margin-bottom: 22px;
     font-family: 'Manolo Mono', sans-serif !important;
+}
+
+.gameContent span{
+    color: white;
 }
 
 .quickgame {
@@ -96,21 +94,6 @@ img {
     border-radius:0px 5px 5px 0px;
     width: 85px;
     height: 85px;
-}
-
-#friendslist {
-    background-color: #3A3B3C; 
-    margin-top: 15px;
-    border-radius: 5px;
-    width: 230px;
-    display: flex;
-    flex-direction: column;
-    padding: 5px;
-}
-
-.friend {
-    margin-top: 5px;
-    margin-bottom: 3px;
 }
 
 .gameid {
