--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/baseStyles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/profile.css') }}">
     <title>Game Tracker</title>
 </head>
 <body>
@@ -15,57 +16,75 @@
         <div id="content">
             <div>
                 <h2 id="displayname">{{ user.fullname }}'s profile</h2>
-                <h3 id="username">{{ user.username }}</h3>
+                <!-- <h3 id="username">{{ user.username }}</h3> -->
                 <div id="mainLayout">
-                    <div  class="section">
-                        <h3>Recent Games</h3>
-                        <table>
-                            <thead>
-                              <tr>
-                                <th>Game Type</th>
-                                <th>Winner</th>
-                                <th>Second Place</th>
-                                <th>Third Place</th>
-                                <th>Game ID</th>
-                                <th>Date</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                              {% for game in recentGames %}
-                              <tr>
-                                <td>{{ game.game_type }}</td>
-                                <td>{{ game.winnerName }}</td>
-                                <td>{{ game.secondName }}</td>
-                                <td>{{ game.thirdName }}</td>
-                                <td>{{ game.game_id }}</td>
-                                <td>{{ game.current_date }}</td>
-                              </tr>
-                              {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="section" id="friends">
-                        <h3>Friends</h3>
-                        <div>
-                            {% for friend in friends %}
-                            <div style="margin-top: 10px;">
-                                <a href="/profile?name={{ friend.username }}" class="friend" style="cursor: pointer;">{{ friend.fullname }}</a>
+                    <div class="section">
+                        <h3 style="margin-bottom: 0px;">Recent Games</h3>
+                        <div id="recentGames">
+                            {% for game in recentGames %}
+                            <div class="game">
+                                <div >
+                                    <img class="testimg" src="{{ url_for('static', filename='images/home/' + game.game_type.replace(' ', '') + '.png') }}" style="border-top-right-radius: 5px;">
+                                </div>
+                                <div class="gameContent">
+                                   <h4>{{ game.game_type }}</h4>
+                                   <h5>Winner: {{ game.winnerName }}</h5>
+                                   <h5>Second: {{ game.secondName }}</h5>
+                                   <span style="font-size: smaller;">Game ID {{ game.game_id}}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                   <span style="font-size: smaller;">{{ game.current_date }}</span>
+                                </div>
                             </div>
                             {% endfor %}
                         </div>
                     </div>
-                    <div class="section" id="favorites" style="width: 785px;">
+                    <div class="section" id="friends">
+                        <div style="height: 170px; width: 220px; position: relative;">
+                            <h3>Friends</h3>
+                            <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
+                                {% for friend in friends[:4] %}
+                                <div style="flex: 0 0 50%; padding: 10px;">
+                                    <a href="/profile?name={{ friend.username }}" class="friend" style="cursor: pointer;">{{ friend.fullname }}</a>
+                                </div>
+                                {% endfor %}
+                            </div>
+                            <button class="btn-outline">Manage Friends</button>
+                        </div>
+                        <div>
+                            <h3>Stats</h3>
+                            <div class="stat">
+                                <img class="icon" src="/static/images/bestfriend.PNG">
+                                <p style="margin-top: 14px;">Best Friend</p>
+                                <p style="font-family: 'Manolo Mono', sans-serif !important;">{{ profileStats[4] }}</p>
+                            </div>
+                            <div class="stat">
+                                <img class="icon" src="/static/images/mostplayed.png">
+                                <p style="margin-top: 14px;">Most Played Game</p>
+                                <p style="font-family: 'Manolo Mono', sans-serif !important;">{{ profileStats[2] }}</p>
+                            </div>
+                            <div class="stat">
+                                <img class="icon" src="/static/images/mostwon.png" style="width: 35px;">
+                                <p style="margin-top: 14px; ">Most Won Game</p>
+                                <p style="font-family: 'Manolo Mono', sans-serif !important;">{{ profileStats[3] }}</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="section" id="favorites" style="width: 880px;">
                         <h3>Favorite Games</h3>
-                        <div id="favGames">
-                            {% for game in favoriteGames %}
+                        <div id="favoriteGames">
+                            {% for game in favoriteGames[:5] %}
                             <div class="miniCard">
-                                <span>{{ game[0] }}</span>
-                                <p>{{ game[1] }}</p>
+                                <div>
+                                    <img src="{{ url_for('static', filename='images/addgame/' + game[0].replace(' ', '') + '.png') }}">
+                                </div>
+                                <div>
+                                    <span style="margin-left: 5px; margin-top: 7px;">{{ game[0] }}</span>
+                                    <p style="margin-left: 5px; margin-top: 12px;">{{ game[1] }}</p>
+                                </div>
                             </div>
                             {% endfor %}
                             {% if currUser.username == profileName or profileName == 'current' %}
                                 <div id="addFavorite" class="miniCard" style="cursor: pointer;">
-                                    <span>Add a Favorite Game</span>
+                                    <p>Manage Your Favorites</p>
                                 </div>
                             {% else %}
                                 <div id="addFavorite" class="Hide">
@@ -76,33 +95,6 @@
                                 <!-- <p>Does not have any favorite games</p> -->
                                 <p style="margin-bottom: 6px;">has no favorite</p>
                                 <p style="margin-top: 0px;">games listed</p>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="section" id="statistics" style="width: 785px;">
-                        <h3>Basic Statistics</h3>
-                        <div id="Stats">
-                        
-                            <div class="miniCard">
-                                <span>Games Played</span>
-                                <p>{{ profileStats[0] }}</p>
-                            </div>
-                            <div class="miniCard">
-                                <span>Games Won</span>
-                                <p>{{ profileStats[1] }}</p>
-                            </div>
-                            <div class="miniCard">
-                                <span>Most Played</span>
-                                <p>{{ profileStats[2] }}</p>
-                            </div>
-                            <div class="miniCard">
-                                <span>Most Won</span>
-                                <p>{{ profileStats[3] }}</p>
-                            </div>
-                            <div class="miniCard">
-                                <span>Best Friend</span>
-                                <p>{{ profileStats[4] }}</p>
                             </div>
 
                         </div>
