Updating IU for profile

--- a/templates/addGame.html
+++ b/templates/addGame.html
@@ -41,7 +41,7 @@
 
         <div class="card" onclick="createPopup('Moonrakers', 5)">
             <div class="img">
-                <img src="/static/images/addgame/moonrakers.jpg">
+                <img src="/static/images/addgame/moonrakers.png">
             </div>
             <div class="text">
                 <p style="font-size: 24px;">Moonrakers</p>
