--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -136,8 +136,6 @@ h3 {
     border-radius: 5px;
     width: 220px;
     margin-bottom: 15px;
-    position: absolute;
-    bottom: 0;
 }
 
 /* Stats Section */
@@ -198,6 +196,8 @@ h3 {
 .miniCard img {
     width: 85px;
     height: 85px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
 }
 
 .miniCard p, span{
@@ -218,4 +218,17 @@ h3 {
 #addFavorite p {
     margin: none;
     color: #17a2b8
+}
+
+#favorites .btn-outline {
+    color: #17a2b8 !important;
+    background: transparent;
+    border: 2px solid #17a2b8;
+    outline: none;
+    padding: 4px 7px;
+    margin-top: 0px;
+    border-radius: 5px;
+    width: 140px;
+    margin-bottom: 8px;
+    margin-right: 12px;
 }
