--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,7 @@
                             <p class="gameTitle">Moonrakers</p>
                             <button style="width: 152px; outline: none;" class="btn btn-outline">Quick Add</button>
                         </div>
-                        <img src="/static/images/addgame/moonrakers.jpg">
+                        <img src="/static/images/addgame/moonrakers.png">
                     </div>
                     <div class="quickgame">
                         <div>
